# CVI620

./: .gitignore  README.md
DiceDetector/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  diceDetect  diceDetect.cpp  hough_kmeans  hough_kmeans.cpp  mobile_v_cpp.docx  voiceover_2.aup  voiceover_3.aup  voiceover_4.aup
DiceDetector/voiceRecordings/: voiceover_1.aup
DiceDetector/voiceRecordings/voiceover_1_data/eff/d1f/: eff1f20e.au  eff1f4de.au  eff1f73c.au  eff1f832.au  eff1f949.au  eff1faac.au
DiceDetector/voiceRecordings/voiceover_2_data/eff/d1f/: eff1f900.au  eff1fe19.au  eff1fee1.au
DiceDetector/voiceRecordings/voiceover_3_data/eff/d1f/: eff1f1e0.au  eff1f386.au  eff1f476.au  eff1f488.au  eff1f6e4.au  eff1f6f2.au  eff1f7be.au  eff1f9c9.au  eff1fae1.au  eff1fce0.au
DiceDetector/voiceRecordings/voiceover_4_data/eff/d1f/: eff1f0b6.au  eff1f224.au  eff1f5b6.au  eff1f797.au  eff1f826.au  eff1f985.au  eff1f9ad.au  eff1fab7.au  eff1fdea.au  eff1ffca.au
DiceDetector/voiceover_1_data/eff/d1f/: eff1fb97.au  eff1fe63.au
DiceDetector/voiceover_2_data/eff/d1f/: eff1f0ce.au  eff1f741.au  eff1fa9f.au  eff1ff95.au  eff1ffeb.au
DiceDetector/voiceover_3_data/eff/d1f/: eff1f1ee.au  eff1f4b7.au  eff1f5e3.au  eff1f66b.au  eff1f7f2.au  eff1f8da.au  eff1f917.au  eff1f970.au  eff1fb54.au  eff1fe1f.au
DiceDetector/voiceover_4_data/eff/d1f/: eff1f3f8.au  eff1f4f3.au  eff1f581.au  eff1f7f5.au  eff1f861.au  eff1fd05.au  eff1fef1.au  eff1ffbc.au
DiceDetectorMobileApp/: settings.gradle
Final_Assessment/: CMakeCache.txt  CMakeLists.txt  Makefile  braille  (+4 more)
(+89 files in other folders)
