cmake_minimum_required(VERSION 2.8)
project( hough_kmeans )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -pthread")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( hough_kmeans hough_kmeans.cpp )
target_link_libraries( hough_kmeans ${OpenCV_LIBS} )
